--- a/spring-msa/msa-auth-server/build.gradle
+++ b/spring-msa/msa-auth-server/build.gradle
@@ -29,7 +29,8 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-oauth2'
 	implementation 'org.springframework.cloud:spring-cloud-starter-security'
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
-    compile 'org.projectlombok:lombok:1.18.6'
+    annotationProcessor 'org.projectlombok:lombok:1.18.6'
+	compile 'org.projectlombok:lombok:1.18.6'
 	compile 'com.h2database:h2'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
